--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,14 +80,13 @@ header {
 
 .user-actions {
   display: flex;
-  /* gap: 12px; */
   align-items: center;
   justify-content: space-evenly;
 }
 
-/* .user-actions a {
-  padding-right: 10px;
-} */
+.user-actions .login-icon {
+  display: none;
+}
 
 .user-actions button {
   background: var(--c3);
@@ -101,7 +100,7 @@ header {
 }
 
 /* NAV */
-.nav {
+nav {
   display: flex;
   justify-content: center;
   background: var(--c7);
@@ -109,7 +108,7 @@ header {
   gap: 140px;
 }
 
-.nav button {
+nav button {
   background: var(--c2);
   border: none;
   padding: 14px 40px;
@@ -120,7 +119,7 @@ header {
   transition: 0.3s;
 }
 
-.nav button:hover {
+nav button:hover {
   background: var(--c5);
   color: var(--c2);
 }
@@ -153,32 +152,47 @@ header {
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.5s;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  height: 100%;
 }
 
 .card:hover {
   transform: scale(1.05);
 }
 
-.card img {
-  max-width: 100%;
+.card-image {
+  flex: 1 1 auto;
+  overflow: hidden;
+  display: flex;
+}
+
+.card-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 .card-content {
   padding: 0 15px;
   display: flex;
   flex-direction: row;
-  height: 20%;
 }
 
 .product-info {
   flex: 1;
   text-align: left;
+  overflow: hidden;
 }
 
 .product-info h2 {
+  overflow: hidden;
+  white-space: nowrap; /* Don't forget this one */
+  text-overflow: ellipsis;
   font-size: 1rem;
-  line-height: 1rem;
-  margin: 0 5px;
+  margin: 5px 5px 0;
   color: #4d4d4d;
 }
 
@@ -198,9 +212,11 @@ header {
 .product-actions {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: end;
   align-items: center;
   margin-left: 10px;
+  margin-bottom: 10px;
+  gap: 10px;
 }
 
 .product-actions button {
