--- a/styles/styles.css
+++ b/styles/styles.css
@@ -343,3 +343,35 @@ footer a:hover {
   background: var(--c7);
   padding: 50px 0;
 }
+
+@media screen and (max-width: 768px) {
+  .login-text {
+    display: none;
+  }
+
+  .user-actions .login-icon {
+    display: flex;
+    font-size: 1.5rem;
+  }
+
+  .logo img {
+    height: 60px;
+  }
+
+  nav {
+    gap: 30px;
+  }
+
+  .search-bar {
+    margin: 0;
+  }
+
+  .btn {
+    padding: 10px 20px;
+    margin: 0 10px;
+  }
+
+  .search-bar input {
+    width: 80%;
+  }
+}
