--- a/styles/login.css
+++ b/styles/login.css
@@ -55,13 +55,15 @@ body {
 
 /* Formulario */
 .login-form {
-  width: 100%;
+  width: 30%;
   max-width: 70%;
   padding: 2rem;
   justify-content: center;
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  background: #102a3b;
+  border-radius: 20px;
 }
 
 .forgot-password {
@@ -272,7 +274,7 @@ body {
   text-align: center;
   font-size: 0.9rem;
   font-weight: 600;
-  color: #102a3b;
+  color: #6ca0ff;
 }
 
 .register .register-link {
