--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,4 @@
 :root {
-<<<<<<< HEAD
-  --c1: #F4FDFF; /* muy claro */
-  --c2: #D5F1FA; 
-  --c3: #1EA7E1; /* celeste brillante */
-  --c4: #236C94; 
-  --c5: #194C6B; 
-  --c6: #15384E; 
-  --c7: #0F273A; /* azul más oscuro */
-=======
   --c1: #f4fdff; /* muy claro */
   --c2: #d5f1fa;
   --c3: #1ea7e1; /* celeste brillante */
@@ -15,53 +6,26 @@
   --c5: #194c6b;
   --c6: #15384e;
   --c7: #0f273a; /* azul más oscuro */
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
 }
 
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
-<<<<<<< HEAD
-  background: var(--c1);
-=======
   background: #000000;
   background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, var(--c5) 54%);
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
   color: var(--c7);
 }
 
 /* HEADER */
-<<<<<<< HEAD
-.header {
-=======
 header {
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: var(--c7);
-<<<<<<< HEAD
-  color: white;
-=======
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
   padding: 15px 30px;
 }
 /* BOTONES */
 .btn {
-<<<<<<< HEAD
-  background: var(--c3);
-  color: white;
-  padding: 8px 16px;
-  border-radius: 20px;
-  text-decoration: none;
-  font-weight: 500;
-  margin: 0 8px;   /* 👈 agrega espacio a los lados */
-}
-
-.btn:hover {
-  background: var(--c2);
-  color: var(--c7);
-=======
   background: var(--c2);
   color: var(--c7);
   padding: 8px 16px;
@@ -74,19 +38,10 @@ header {
 .btn:hover {
   background: var(--c5);
   color: var(--c2);
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
 }
 
 /* LOGO */
 .logo img {
-<<<<<<< HEAD
-  height: 90px;   /* ajustá según lo necesites */
-  width: auto;
-}
-
-.search-bar input {
-  padding: 12px 350px;
-=======
   height: 90px;
   width: auto;
 }
@@ -101,13 +56,10 @@ header {
 .search-bar input {
   padding: 0 2rem;
   height: 50px;
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
   border-radius: 25px;
   border: 1px solid var(--c3);
   outline: none;
   font-family: 'Poppins', sans-serif;
-<<<<<<< HEAD
-=======
   width: 70%;
 }
 
@@ -124,19 +76,10 @@ header {
 .search-bar button:hover {
   background: var(--c2);
   color: var(--c4);
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
 }
 
 .user-actions {
   display: flex;
-<<<<<<< HEAD
-  gap: 12px;  /* 👈 espacio entre cada botón */
-}
-
-/* .user-actions a {
-  padding-right: 10px;
-} */
-=======
   align-items: center;
   justify-content: space-evenly;
 }
@@ -144,7 +87,6 @@ header {
 .user-actions .login-icon {
   display: none;
 }
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
 
 .user-actions button {
   background: var(--c3);
@@ -158,47 +100,20 @@ header {
 }
 
 /* NAV */
-<<<<<<< HEAD
-.nav {
-  display: flex;
-  justify-content: center;
-  background: var(--c6);
-=======
 nav {
   display: flex;
   justify-content: center;
   background: var(--c7);
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
   padding: 12px;
   gap: 140px;
 }
 
-<<<<<<< HEAD
-.nav button {
-  background: var(--c3);
-=======
 nav button {
   background: var(--c2);
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
   border: none;
   padding: 14px 40px;
   border-radius: 1000px;
   cursor: pointer;
-<<<<<<< HEAD
-  color: white;
-  font-weight: 500;
-  transition: 0.3s;
-}
-
-.nav button:hover {
-  background: var(--c2);
-  color: var(--c7);
-}
-
-/* HERO */
-.hero {
-  background: var(--c7);
-=======
   color: var(--c7);
   font-weight: 600;
   transition: 0.3s;
@@ -216,7 +131,6 @@ nav button:hover {
 /* HERO */
 .slider {
   background: var(--c6);
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
   color: white;
   text-align: center;
   padding: 80px 20px;
@@ -234,13 +148,6 @@ nav button:hover {
 
 .card {
   background: white;
-<<<<<<< HEAD
-  border-radius: 12px;
-  padding: 15px;
-  text-align: center;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  transition: transform 0.5s;
-=======
   border-radius: 0 0 12px 12px;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -249,29 +156,12 @@ nav button:hover {
   flex-direction: column;
   overflow: hidden;
   height: 100%;
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
 }
 
 .card:hover {
   transform: scale(1.05);
 }
 
-<<<<<<< HEAD
-.card img {
-  max-width: 100%;
-  border-radius: 10px;
-}
-
-/* FOOTER */
-.footer {
-  background: var(--c6);
-  color: white;
-  text-align: center;
-  padding: 30px 20px;
-  font-size: 0.9rem;
-}
-.footer a {
-=======
 .card-image {
   flex: 1 1 auto;
   overflow: hidden;
@@ -348,17 +238,11 @@ footer {
   font-size: 1rem;
 }
 footer a {
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
   color: var(--c2);
   margin: 0 12px;
   text-decoration: none;
   transition: 0.3s;
 }
-<<<<<<< HEAD
-.footer a:hover {
-  color: var(--c3);
-}
-=======
 footer a:hover {
   color: var(--c3);
 }
@@ -491,4 +375,39 @@ footer a:hover {
     width: 80%;
   }
 }
->>>>>>> 15cd0f3 (Normalizar saltos de línea)
+
+.carrusel {
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+    overflow: hidden;
+    border-radius: 10px;
+    position: relative;
+    aspect-ratio: 3 / 1; /* ancho 3 veces la altura */
+}
+
+
+.imagenes {
+    display: flex;
+    width: calc(100% * 4); /* si tenés 4 imágenes */
+    height: 100%;
+    animation: mover 30s infinite linear; /* antes 12s -> ahora 30s */
+}
+
+
+.imagenes img {
+    width: 100%;
+    max-height: 200px; /* altura máxima */
+    object-fit: contain;
+    flex-shrink: 0;
+}
+
+
+
+@keyframes mover {
+    0% { transform: translateX(0%); }
+    25% { transform: translateX(-100%); }
+    50% { transform: translateX(-200%); }
+    75% { transform: translateX(-300%); }
+    100% { transform: translateX(0%); }
+}
