--- a/styles/styles.css
+++ b/styles/styles.css
@@ -189,7 +189,12 @@ nav button:hover {
 
 .product-info h2 {
   overflow: hidden;
-  white-space: nowrap; /* Don't forget this one */
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  overflow: hidden;
   text-overflow: ellipsis;
   font-size: 1rem;
   margin: 5px 5px 0;
