--- a/estilos.css
+++ b/estilos.css
@@ -1,16 +1,28 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    font-family: 'Poppins', sans-serif;
+    background-color:#21415a;
+    background: linear-gradient(
+        180deg,
+        rgba(33, 65, 90, 1) 0%,
+        rgba(70, 139, 192, 1) 100%
+    );
     text-align: center;
     margin: 0;
     padding: 0;
+    height: 100%;
+    color: #f8f9fa;
 }
 
 .container {
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
     margin: 100px auto;
-    background-color: #fff;
+    background: #21415a;
+  background: linear-gradient(
+    180deg,
+    rgba(33, 65, 90, 1) 0%,
+    rgba(70, 139, 192, 1) 100%
+    );
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -34,14 +46,14 @@ input[type="email"], input[type="submit"] {
 }
 
 input[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #0d6efd;
     color: white;
     border: none;
     cursor: pointer;
 }
 
 input[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #0d6efd;
 }
 
 img {
