--- a/styles/login.css
+++ b/styles/login.css
@@ -10,7 +10,6 @@
   --label-font: 'Poppins', sans-serif;
 }
 
-/* Estilo global */
 html,
 body {
   background-color: #f8f9fa;
@@ -19,7 +18,6 @@ body {
   color: #ffff;
 }
 
-/* Contenedor del login */
 .login-container {
   display: flex;
   height: 100%;
@@ -43,7 +41,7 @@ body {
 }
 
 /* Fondo de la izquierda */
-.right-background {
+/* .right-background {
   background-image: url('/images/login01.png');
   flex: 1;
   background-color: #ffff;
@@ -52,7 +50,7 @@ body {
   background-repeat: no-repeat;
   width: 50%;
   height: 100vh;
-}
+} */
 
 /* Contenedor del formulario */
 .form-container {
@@ -64,7 +62,6 @@ body {
   border-radius: 30px;
 }
 
-/* Formulario */
 .login-form {
   width: 30%;
   max-width: 70%;
@@ -89,7 +86,6 @@ body {
 
 .forgot-password:hover {
   color: #6ca0ff;
-  /* text-decoration: underline; */
 }
 
 .full-container {
@@ -134,7 +130,6 @@ body {
   box-shadow: 0px 8px 10px #194869;
 }
 
-/* Color del Placeholder */
 .form-control::placeholder {
   font-size: 0.9rem;
   font-weight: 600;
@@ -169,15 +164,15 @@ body {
   appearance: none;
   width: 20px;
   height: 20px;
-  border-radius: 3px; /* levemente redondeado */
-  background: #f2f2f2; /* color de fondo (sin bordes visibles) */
+  border-radius: 3px;
+  background: #f2f2f2;
   border: none;
   cursor: pointer;
   position: relative;
 }
 
 .remember input[type='checkbox']:checked {
-  background: #0d6efd; /* color al estar marcado */
+  background: #0d6efd;
 }
 
 .remember input[type='checkbox']:checked::after {
@@ -189,7 +184,7 @@ body {
   height: 10px;
   border: solid #fff;
   border-width: 0 2px 2px 0;
-  transform: rotate(45deg); /* marca de check */
+  transform: rotate(45deg);
 }
 
 .remember label {
@@ -210,7 +205,6 @@ body {
 }
 
 .form-buttons .btn {
-  /* Estilos comunes a todos los botones */
   font-family: var(--label-font);
   letter-spacing: 1px;
   display: inline-flex;
@@ -224,23 +218,20 @@ body {
   height: max-content;
 }
 
-/* Efecto hover aplicable a ambos botones */
 .btn:hover {
   filter: brightness(1.06);
 }
 
-/* Estilos específicos del botón de login (no aplican a Google) */
 .form-buttons .btn-login {
   background: var(--btn-bg);
   color: #ffffff;
   font-weight: 600;
-  height: 3.6rem; /* ligeramente más alto que los inputs */
+  height: 3.6rem;
   border: none;
   box-shadow: var(--btn-shadow);
   font-size: 1.1rem;
 }
 
-/* Estilos específicos del botón de Google */
 .form-buttons .btn-google {
   background: #eee8e8;
   color: #000000;
